fixed scrolling on detail card on small device

--- a/src/components/Instance.css
+++ b/src/components/Instance.css
@@ -33,7 +33,6 @@
     flex: 1;
     width: 100%;
     height: 100%;
-    overflow-y: auto;
 }
 
 .kgs-instance .kgs-notice .kgs-notice-agree-button {
@@ -187,6 +186,10 @@
         -ms-grid-row: 3;
         -ms-grid-column-span: 2;
     } 
+
+    .kgs-instance-scroll {
+        overflow-y: auto;
+    }
 }
 
 /* small hack to fix adjustment for ie 11 */
